--- a/CSS/body/body.css
+++ b/CSS/body/body.css
@@ -1,4 +1,7 @@
 body {
+    position: relative;
+    width: 1440px;
+    height: 1350px;
     
-    background-color: rgb(233, 162, 162);
+    background: #F4F4F6;
 }
