--- a/CSS/header/header_before_reg.css
+++ b/CSS/header/header_before_reg.css
@@ -4,7 +4,8 @@ header {
     height: 70px;
     left: 0px;
     top: 140px;
-
+    margin: auto;
+    
     background: #FFFFFF;
     box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
     
